--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "name": "stackcart_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
-  "engines": {
-    "node": "18.x"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "server": "nodemon server.js"
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +18,7 @@
     "braintree": "^3.21.0",
     "colors": "^1.4.0",
     "concurrently": "^8.2.2",
+    "cords": "^1.0.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
@@ -30,5 +28,10 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
     "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.2"
   }
 }
